--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -16,5 +16,11 @@
         <li>Your controller at <code><a href="{{ 'D:/www/symfony/4/learning/src/Controller/DefaultController.php'|file_link(0) }}">src/Controller/DefaultController.php</a></code></li>
         <li>Your template at <code><a href="{{ 'D:/www/symfony/4/learning/templates/default/index.html.twig'|file_link(0) }}">templates/default/index.html.twig</a></code></li>
     </ul>
+
+    <ul>
+        {% for user in users %}
+            <li>{{ user.name }} won {{ random_gift[loop.index0] }}</li>
+        {% endfor %}
+    </ul>
 </div>
 {% endblock %}
