--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -20,7 +20,8 @@
     <ul>
         {% for user in users %}
 
-            <li>{{ user.name }} won {{ random_gift[loop.index0] }}</li>
+            {# <li>{{ user.name }} won {{ random_gift[loop.index0] }}</li> #}
+            <li>{{ user.name }}</li>
         {% endfor %}
     </ul>
 
