--- a/templates/default/task.html.twig
+++ b/templates/default/task.html.twig
@@ -7,4 +7,9 @@
             <p>{{ post }}</p>
         {% endfor %}
     {% endif %}
+
+    {% if form is defined %}
+        {{ form(form) }}
+    {% endif %}
+
 {% endblock %}
