--- a/templates/default/video_form.html.twig
+++ b/templates/default/video_form.html.twig
@@ -6,4 +6,11 @@
     <div style="width: 400px;">
         {{ form(form) }}
     </div>
+
+    {% if videos is defined and videos is not empty %}
+        {% for v in videos %}
+            {{ v.id }}
+            {{ v.title }}
+        {% endfor %}
+    {%  endif %}
 {% endblock %}
