--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -36,5 +36,11 @@
         {'number': 2}
     )) }}
 
+    {% if app.user %}
+        <div><a href="{{ path('app_logout') }}">Logout</a></div>
+    {% else %}
+        <div><a href="{{ path('app_login') }}">Login</a></div>
+    {% endif %}
+
 </div>
 {% endblock %}
